fix(client): align layout and cursors for global header pull on home cards

--- a/apps/client/src/modules/AppWrapper/styles.module.scss
+++ b/apps/client/src/modules/AppWrapper/styles.module.scss
@@ -3,5 +3,5 @@
   min-height: 100dvh;
   flex: 1;
   flex-direction: column;
-  will-change: transform;
+  will-change: margin-bottom, transform;
 }
